# sippar

./: .env  .gitignore  .gitmodules  CLAUDE.local.md.backup.20250925_192337  CLAUDE.local.md.backup.20250925_193201  CLAUDE.local.md.backup.20250925_200720  CLAUDE.md  CLAUDE.md.ci-template  Cargo.toml  LAVA.md  LICENSE  NURU_AI_TECHNICAL_ARCHITECTURE_ANALYSIS.md  README.md  TOPOLOGY_ANALYSIS_REPORT.md  canister_ids.json  dfx.json  package-lock.json  package.json  temp_response.json  test_all_endpoints.sh
.claude/: README.md  settings.json
archive/: DEPLOYMENT_READY_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  PHASE2_CKALGOREACTJS_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  deployment_testnet_745336394.json
archive/canisters/ck_algo/: Cargo.toml
archive/canisters/ck_algo/src/: integration_test_helpers.rs  lib_modular_draft.rs  test_helpers.rs  tests.rs
archive/canisters/ck_algo/src/modules/: compliance.rs  mod.rs  storage.rs  types.rs
demo/: README.md  index.html  package.json  script.js  style.css
docs/: ARCHITECTURE.md  CODEBASE_INVENTORY.md  DOCUMENTATION-AUDIT.md  FRONTEND_INTEGRATION_GUIDE.md  HIVELOCITY_DEPLOYMENT.md  PROJECT_STATUS.md  README.md  SIPPAR_HIVELOCITY_DEPLOYMENT.md  STATUS.md
examples/: README-INTERACTIVE-DEMO.md  ai-explainability-demo.ts  enhanced-canister-test.ts  enterprise-compliance-demo-corrected.ts  enterprise-compliance-demo.ts  interactive-user-journey-demo.js  real-production-demo.js  simple-canister-test.js  smart-contract-automation-demo.ts
scripts/: e2e-cketh-to-ci-agent.sh
src/canisters/simplified_bridge/: Cargo.toml  simplified_bridge.did
src/canisters/simplified_bridge/src/: lib.rs
tests/: README.md  lib.rs  (+6 more)
(+478 files in other folders)
