[workspace]
members = [
    "src/canisters/ck_algo",
    "src/canisters/threshold_signer/src/algorand_threshold_signer_backend"
]
resolver = "2"

[workspace.dependencies]
# ICP SDK
ic-cdk = "0.13"
ic-cdk-macros = "0.8"
candid = "0.10.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
rand = "0.8"

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Algorand SDK
algonaut = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"