[package]
name = "simplified_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.8"
ic-cdk-macros = "0.8"
candid = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
sha2 = "0.10"
# Note: ICRC-2 types defined manually in lib.rs to avoid dependency conflicts